--- a/frontend/src/components/Hero.module.css
+++ b/frontend/src/components/Hero.module.css
@@ -11,13 +11,14 @@
 .heroContent {
   text-align: center;
   max-width: 800px; /* Limit the width of the text for readability */
+  position: relative
 }
 
 .title {
   font-size: 5.6rem; /* Large, impactful font size */
   font-weight: 700;
   margin-bottom: calc(var(--spacing-unit) * 2); /* 16px margin */
-  /* We can add gradients or other effects later */
+  color: var(--color-accent);/* We can add gradients or other effects later */
 }
 
 .subtitle {
